MODIFIED: Class attribute created

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -22,15 +22,15 @@
     <div class="main-content" id="main-content">
 
         <div class="gallery-cards" id="gallery-cards">
-            <img src="../assets/gallery/1_girl_surfing.jpg" alt="Outdoor Pursuits">
+            <img class="gallery-photos" src="../assets/gallery/1_girl_surfing.jpg" alt="Outdoor Pursuits">
         </div>
 
         <div class="gallery-cards" id="gallery-cards">
-            <img src="../assets/gallery/2_golf_image.jpg" alt="Golf">
+            <img class="gallery-photos" src="../assets/gallery/2_golf_image.jpg" alt="Golf">
         </div>
 
         <div class="gallery-cards" id="gallery-cards">
-            <img src="../assets/gallery/3_lifestyle.jpeg" alt="Lifestyle">
+            <img class="gallery-photos" src="../assets/gallery/3_lifestyle.jpeg" alt="Lifestyle">
         </div>
 
         <div class="gallery-cards-text">Outdoor Pursuits</div>
@@ -38,15 +38,15 @@
         <div class="gallery-cards-text">Lifestyle</div>
 
         <div id="gallery-cards">
-            <img src="../assets/gallery/4_landscape.jpg" alt="Landscape">
+            <img class="gallery-photos" src="../assets/gallery/4_landscape.jpg" alt="Landscape">
         </div>
 
         <div id="gallery-cards">
-            <img src="../assets/gallery/5_clubhouse.jpg" alt="Clubhouse">
+            <img class="gallery-photos" src="../assets/gallery/5_clubhouse.jpg" alt="Clubhouse">
         </div>
 
         <div id="gallery-cards">
-            <img src="../assets/gallery/6_wellness.jpg" alt="Wellness">
+            <img class="gallery-photos" src="../assets/gallery/6_wellness.jpg" alt="Wellness">
         </div>
 
         <div class="gallery-cards-text">Landscapes</div>
