--- a/pages/our_worlds.html
+++ b/pages/our_worlds.html
@@ -170,7 +170,7 @@
             }
         }
     </script>
-    <script src="../js/header.js"></script>\
+    <script src="../js/header.js"></script>
     <script src="../js/footer.js"></script>
 </body>
 </html>
