--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="shortcut icon" href="../assets/gallery/logo-transparent.png">
+    <link href='https://css.gg/arrow-long-down.css' rel='stylesheet'>
     <title>Discovery Land Company</title>
 </head>
 
@@ -27,7 +28,9 @@
             <p class="yourworld-text">your world</p>
         </div>
         <div class="scroll-text">
-            <p class="scroll-text">Scroll to explore</p>
+            <p class="scroll-text">
+                Scroll to explore<span class="scroll-arrow" style='font-size:100px;'>&darr;</span>
+            </p>
         </div>
     </header>
 
@@ -53,6 +56,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- <div class="section-2" id="section-2">
+            <div class="section2-top">
+                <div class="section2-left">
+                    <h1>Explore</h1>
+                    <h2>our worlds</h2>
+                </div>
+                <div class="section2-right"></div>
+            </div>
+            <div class="section2-bottom">
+
+            </div>
+        </div> -->
     </div>
 
     <div id="footer-section"></div>
