ADDED: UI Design for homepage

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="shortcut icon" href="../assets/gallery/logo-transparent.png">
     <link href='https://css.gg/arrow-long-down.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Discovery Land Company</title>
+
 </head>
 
 <body>
@@ -29,7 +31,8 @@
         </div>
         <div class="scroll-text">
             <p class="scroll-text">
-                Scroll to explore<span class="scroll-arrow" style='font-size:100px;'>&darr;</span>
+                Scroll to explore
+                <span class="scroll-arrow" style='font-size:100px;'>&darr;</span>
             </p>
         </div>
     </header>
@@ -40,14 +43,16 @@
                 <div class="left-side-content">
                     <h1 class="welcome-text">Welcome to</h1>
                     <h2 class="ourworld-text">our world</h2>
-                    <article class="section1-text">Discover the unique atmosphere of our private residential clud communities. Once
+                    <article class="section1-text">Discover the unique atmosphere of our private residential clud
+                        communities. Once
                         experienced. Never forgotton. This is classic, comfortable, modern living in nature's most
                         spectacular settings worldwide. Reassuringly, exclusive. Generously welcoming. Find your unique
                         world - a place where families love to be; creating unforgettable moments, together.
                     </article>
                 </div>
                 <div>
-                    <img class="left-side-image" src="../assets/homepage/welcome-image.jpg" alt="Man sitting near bonfire">
+                    <img class="left-side-image" src="../assets/homepage/welcome-image.jpg"
+                        alt="Man sitting near bonfire">
                 </div>
             </div>
             <div id="rightside">
@@ -57,18 +62,286 @@
             </div>
         </div>
 
-        <!-- <div class="section-2" id="section-2">
-            <div class="section2-top">
-                <div class="section2-left">
-                    <h1>Explore</h1>
-                    <h2>our worlds</h2>
-                </div>
-                <div class="section2-right"></div>
+        <div class="section-2" id="section-2">
+            <div class="section2-left">
+                <h1 class="explore-text">Explore</h1>
+                <h2 class="ourworlds-text">our worlds</h2>
             </div>
-            <div class="section2-bottom">
+            <div class="section2-right">
+                <button class="button button-first"><img class="section2-arrow" src="../assets/homepage/left_arrow.png"
+                        alt="left arrow"></button>
+                <button class="button"><img class="section2-arrow" src="../assets/homepage/right_arrow.png"
+                        alt="right arrow"></button>
+            </div>
+        </div>
+    </div>
 
-            </div>
-        </div> -->
+    <div class="section-3">
+        <div class="image-cards">
+            <figure class="explore-images image-1">
+                <h1 class="explore-title">North Shore Preserve</h1>
+                <p class="explore-location">Kaua'i, Hawaii</p>
+            </figure>
+        </div>
+        <div class="image-cards">
+            <figure class="explore-images image-2">
+                <h1 class="explore-title">James Island</h1>
+                <p class="explore-location">Southern Gulf Islands, British Columbia, Canada</p>
+            </figure>
+        </div>
+        <div class="image-cards">
+            <figure class="explore-images image-3">
+                <h1 class="explore-title">Costaterra</h1>
+                <p class="explore-location">Comporta, Portugal</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-4">
+                <h1 class="explore-title">Barbuda Ocean Club</h1>
+                <p class="explore-location">Barbuda, West Indies</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-5">
+                <h1 class="explore-title">Driftwood</h1>
+                <p class="explore-location">Austin, Texas</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-6">
+                <h1 class="explore-title">Troubadour</h1>
+                <p class="explore-location">Nashville, Tennessee</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-7">
+                <h1 class="explore-title">Playa Grande</h1>
+                <p class="explore-location">Rio San Juan, Dominican Republic</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-8">
+                <h1 class="explore-title">Chileno Bay</h1>
+                <p class="explore-location">Cabo San Lucas, Mexico</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-9">
+                <h1 class="explore-title">The Summit</h1>
+                <p class="explore-location">Las Vegas, Nevada</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-10">
+                <h1 class="explore-title">Dune Deck</h1>
+                <p class="explore-location">Westhampton Beach, NY</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-11">
+                <h1 class="explore-title">Silo Ridge</h1>
+                <p class="explore-location">Amenia, New York</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-12">
+                <h1 class="explore-title">Makena</h1>
+                <p class="explore-location">Maui, Hawaii</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-13">
+                <h1 class="explore-title">Yellowstone Club</h1>
+                <p class="explore-location">Big Sky, Montana</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-14">
+                <h1 class="explore-title">Gozzer Ranch</h1>
+                <p class="explore-location">Coeur d'Alene, Idaho</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-15">
+                <h1 class="explore-title">El Dorado</h1>
+                <p class="explore-location">Los Cabos, Mexico</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-16">
+                <h1 class="explore-title">Maddison</h1>
+                <p class="explore-location">La Quinta, California</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-17">
+                <h1 class="explore-title">Baker's Bay</h1>
+                <p class="explore-location">Great Guana Cay, Bahamas</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-18">
+                <h1 class="explore-title">Hideaway</h1>
+                <p class="explore-location">La Quinta, California</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-19">
+                <h1 class="explore-title">Mountaintop</h1>
+                <p class="explore-location">Cashiers, North Carolina</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-20">
+                <h1 class="explore-title">Mirabel</h1>
+                <p class="explore-location">Scottsdale, Arizona</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-21">
+                <h1 class="explore-title">Kuki'o</h1>
+                <p class="explore-location">Kohala, Hawaii</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-22">
+                <h1 class="explore-title">Vaquero</h1>
+                <p class="explore-location">Westlake, Texas</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-23">
+                <h1 class="explore-title">Iron House</h1>
+                <p class="explore-location">Whitefish, Montana</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-24">
+                <h1 class="explore-title">Cordevalle</h1>
+                <p class="explore-location">Silicon Valley, California</p>
+            </figure>
+        </div>
+
+        <div class="image-cards">
+            <figure class="explore-images image-25">
+                <h1 class="explore-title">Estancia</h1>
+                <p class="explore-location">Scottsdale, Arizona</p>
+            </figure>
+        </div>
+    </div>
+
+    <div id="section-4" class="section-4">
+        <div class="section4-title">
+            <h1 class="explore-text">Lands of</h1>
+            <h2 class="ourworlds-text discovery-text">Discovery</h2>
+        </div>
+        <div class="section4-title">
+            <p class="section4-para">A world away from the day-to-day. Your escape. Your haven. Your world. <br>Explore
+                the map below and take a journey to our communities. </p>
+        </div>
+        <div class="map-link section4-title">
+            <a class="map-title selected-map" href="#section-4">North America & Caribbean</a>
+            <a class="map-title unselected-map" href="#section-4">Hawaii</a>
+            <a class="map-title unselected-map" href="#section-4">Europe</a>
+        </div>
+    </div>
+
+    <div class="section-5" id="section-5">
+        <div class="section5-map">
+            <img class="globe" src="../assets/homepage/globe-image.jpg" alt="Globe">
+        </div>
+        <div class="section5-details">
+            <p class="section5-content">
+                <span class="section5-arrow" style="font-size: 50px;">&larr;</span>
+                <span class="section5-arrow" style="font-size: 50px;">&rarr;</span>
+            </p>
+            <p class="section5-content icons">
+                <span class="sun-icon" style='font-size:50px; color: white;'>&#9728;</span>
+                <span class="wind-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                        class="bi bi-wind" viewBox="0 0 16 16" style="color: white;">
+                        <path
+                            d="M12.5 2A2.5 2.5 0 0 0 10 4.5a.5.5 0 0 1-1 0A3.5 3.5 0 1 1 12.5 8H.5a.5.5 0 0 1 0-1h12a2.5 2.5 0 0 0 0-5zm-7 1a1 1 0 0 0-1 1 .5.5 0 0 1-1 0 2 2 0 1 1 2 2h-5a.5.5 0 0 1 0-1h5a1 1 0 0 0 0-2zM0 9.5A.5.5 0 0 1 .5 9h10.042a3 3 0 1 1-3 3 .5.5 0 0 1 1 0 2 2 0 1 0 2-2H.5a.5.5 0 0 1-.5-.5z" />
+                    </svg>
+                </span>
+                <span class="compass-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                        class="bi bi-compass" viewBox="0 0 16 16" style="color: white;">
+                        <path
+                            d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016zm6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                        <path d="m6.94 7.44 4.95-2.83-2.83 4.95-4.949 2.83 2.828-4.95z" />
+                    </svg>
+                </span>
+                <br>
+                <span>
+                    <span class="icon-text">69 °F</span>
+                    <span class="icon-text">5.55 mph</span>
+                    <span class="icon-text">288°</span>
+                </span>
+            </p>
+                
+
+
+            <p class="section5-content">
+                <span class="location">La Quinta, California</span><br>
+                <span class="title">Madison</span>
+            </p>
+
+            <p class="section5-content">
+                <span class="location_symbol">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-geo-alt" viewBox="0 0 16 16" style="color: white;">
+                        <path
+                            d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                    </svg>
+                </span>
+                <span class="location_value">33.660962° N / -116.244456° W</span>
+            </p>
+
+
+        </div>
+        <div class="section5-image">
+            <img src="../assets/homepage/madison.jpg" alt="Madison" width="400">
+        </div>
+    </div>
+
+    <div class="section-6" id="section-6">
+        <div class="div-sections section6-image1">
+            <p class="section6-text">Experiences</p>
+            <span class="right-arrow">&rarr;</span>
+        </div>
+        <div class="div-sections section6-image2">
+            <p class="section6-text">Lifestyle</p>
+            <span class="right-arrow">&rarr;</span>
+        </div>
+        <div class="div-sections section6-image3">
+            <p class="section6-text">Wellness</p>
+            <span class="right-arrow">&rarr;</span>
+        </div>
+    </div>
+
     </div>
 
     <div id="footer-section"></div>
