REFACTORED: UI Design to adjust width of section 1

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -52,7 +52,7 @@
                 </div>
                 <div>
                     <img class="left-side-image" src="../assets/homepage/welcome-image.jpg"
-                        alt="Man sitting near bonfire">
+                        alt="Man sitting near bonfire" width="800">
                 </div>
             </div>
             <div id="rightside">
