[Ashika]REFACTORED: Title of page

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/about.css">
     <link rel="shortcut icon" href="../assets/gallery/logo-transparent.png">
     <link href='https://css.gg/arrow-long-down.css' rel='stylesheet'>
-    <title>Discovery Land Company</title>
+    <title>About DLC | Discovery Land Company</title>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="image-section">
-                <img src="../assets/about/mission_image.jpg" alt="Mission Image" height="900">
+                <img class="section2-image"  src="../assets/about/mission_image.jpg" alt="Mission Image">
             </div>
         </div>
 
@@ -137,36 +137,36 @@
                 <img class="right-image" src="../assets/about/section7_image2.jpg" alt="Discovery Design 2">
             </div>
         </div>
-    </div>
 
-    <div class="section-6">
-        <img class="section6-image" src="../assets/about/section8_image.jpg" alt="Dining Table">
-    </div>
-
-    <div class="section-2">
-        <div class="mission-section">
-            <h1 class="section-title">Discovery Builders</h1>
-            <p class="mission-content">
-                Every Discovery property is wonderfully in-tune with its natural surroundings - a harmonious blend of
-                the architecturally impressive with the environmentally sensitive. And your every expectation will be
-                met, with our meticulous eye for detail matching outstanding levels of craftsmanship and master
-                building.
-            </p>
-            <p class="builders-image">
-                <img src="../assets/about/section9_left.jpg" alt="Discovery Builders Image 1" width="700">
-            </p>
+        <div class="section-6">
+            <img class="section6-image" src="../assets/about/section8_image.jpg" alt="Dining Table">
         </div>
-        <div class="image-section">
-            <img src="../assets/about/section9_right.jpg" alt="Discovery Builders Image 2" height="900">
+    
+        <div class="section-2">
+            <div class="mission-section">
+                <h1 class="section-title">Discovery Builders</h1>
+                <p class="mission-content">
+                    Every Discovery property is wonderfully in-tune with its natural surroundings - a harmonious blend of
+                    the architecturally impressive with the environmentally sensitive. And your every expectation will be
+                    met, with our meticulous eye for detail matching outstanding levels of craftsmanship and master
+                    building.
+                </p>
+                <p class="builders-image">
+                    <img class="section9-left" src="../assets/about/section9_left.jpg" alt="Discovery Builders Image 1">
+                </p>
+            </div>
+            <div class="section9-image image-section">
+                <img class="section9-right" src="../assets/about/section9_right.jpg" alt="Discovery Builders Image 2" height="900">
+            </div>
         </div>
-    </div>
-
-    <div class="section-10">
-        <div class="section10-content">
-            <h1 class="section10-title">Our Worlds</h1>
-            <a class="section10-link" href="../pages/our_worlds.html">Explore</a>
+    
+        <div class="section-10">
+            <div class="section10-content">
+                <h1 class="section10-title">Our Worlds</h1>
+                <a class="section10-link" href="../pages/our_worlds.html">Explore</a>
+            </div>
         </div>
-    </div>
+    </div>    
 
     <div id="footer-section"></div>
 
