--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/gallery.css">
     <link rel="shortcut icon" href="../assets/gallery/logo-transparent.png">
-    <title>Discovery Land Company</title>
+    <title>Gallery | Discovery Land Company</title>
 </head>
 
 <body>
