--- a/pages/our_worlds.html
+++ b/pages/our_worlds.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/our_world.css">
     <link rel="shortcut icon" href="../assets/gallery/logo-transparent.png">
-    <title>Discovery Land Company</title>
+    <title>Our Worlds | Discovery Land Company</title>
 </head>
 <body id="gallery-body" class="gallery-body">
     <header class="header" id="header">
