[Ashika]REFACTORED: Link to wellness page

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -109,7 +109,7 @@
                     <p class="section3-para">
                         Unwind at an indulgent spa. Set challenging targets with a tailor-made fitness plan. Or let our talented chefs treat you to our flavorful international menus created using the finest, carefully selected foods sourced locally from organic farms.
                     </p>
-                    <a class="section3-link" href="../pages/golf.html">Explore</a>
+                    <a class="section3-link" href="../pages/wellness.html">Explore</a>
                 </div>
             </div>
         </div> 
