[Ashika]REFACTORED: UI design for page number

--- a/pages/press.html
+++ b/pages/press.html
@@ -92,8 +92,16 @@
                 <a class="section2-link section4-link" href="https://view.publitas.com/discovery-land-company/sunset-com-08-13-21/page/1">Read Article</a>
             </div>
         </div>
-
+        <div class="section-5">
+            <div>
+                <span class="left-arrow arrow">&larr;</span>
+                <span class="pages">1 - 15</span>
+                <span class="right-arrow arrow">&rarr;</span>
+            </div>
+        </div>
     </div>
+
+    
 
 
     <div id="footer-section"></div>
