--- a/pages/about.html
+++ b/pages/about.html
@@ -14,6 +14,14 @@
     <link rel="shortcut icon" href="../assets/gallery/logo-transparent.png">
     <link href='https://css.gg/arrow-long-down.css' rel='stylesheet'>
     <title>About DLC | Discovery Land Company</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
+    <script>
+        $(document).ready(function () {
+            $(".dropbtn").click(function () {
+                $("#dropdown").slideToggle("slow");
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -170,23 +178,6 @@
 
     <div id="footer-section"></div>
 
-    <script>
-        function displayDropdown() {
-            document.getElementById("dropdown").classList.toggle("show");
-        }
-        window.onclick = function (event) {
-            if (!event.target.matches('.dropbtn')) {
-                var dropdowns = document.getElementsByClassName("dropdown-content");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show')) {
-                        openDropdown.classList.remove('show');
-                    }
-                }
-            }
-        }
-    </script>
     <script src="../js/header.js"></script>
     <script src="../js/footer.js"></script>
 </body>
