--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -15,7 +15,14 @@
     <link href='https://css.gg/arrow-long-down.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Discovery Land Company</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
+    <script>
+        $(document).ready(function () {
+            $(".dropbtn").click(function () {
+                $("#dropdown").slideToggle("slow");
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -300,7 +307,7 @@
                     <span class="icon-text">288°</span>
                 </span>
             </p>
-                
+
 
 
             <p class="section5-content">
@@ -346,23 +353,6 @@
 
     <div id="footer-section"></div>
 
-    <script>
-        function displayDropdown() {
-            document.getElementById("dropdown").classList.toggle("show");
-        }
-        window.onclick = function (event) {
-            if (!event.target.matches('.dropbtn')) {
-                var dropdowns = document.getElementsByClassName("dropdown-content");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show')) {
-                        openDropdown.classList.remove('show');
-                    }
-                }
-            }
-        }
-    </script>
     <script src="../js/header.js"></script>
     <script src="../js/footer.js"></script>
 </body>
