[Ashika]REFACTORED: Class name for image

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -330,7 +330,7 @@
 
         </div>
         <div class="section5-image">
-            <img src="../assets/homepage/madison.jpg" alt="Madison" width="400">
+            <img class="madison-image" src="../assets/homepage/madison.jpg" alt="Madison" width="400">
         </div>
     </div>
 
