[Ashika]ADDED: Media queries for screen sizes of 900px

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div id="rightside">
-                <div class="right-side-image">
+                <div >
                     <img class="right-side-image" src="../assets/homepage/section1-right.jpg" alt="People surfing">
                 </div>
             </div>
